aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__xor__tests__xor_lit_reg.snap
---
source: aya-assembly/src/parser/instructions/xor.rs
expression: result
---
Instruction(
    XorLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 9,
                end: 13,
            },
        ),
    ),
)
