aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__xor__tests__xor_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/xor.rs
expression: result
---
Instruction(
    XorRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
